--- a/tp1/report/src/preamble.tex
+++ b/tp1/report/src/preamble.tex
@@ -9,6 +9,7 @@
 \usepackage{mathrsfs}
 \usepackage{mathtools}
 \usepackage{graphicx}
+\usepackage{hyperref}
 \usepackage{caption}
 
 \usepackage{pdfpages}
